<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="hello">Hello World, UARTCTLActivity!</string>
  <string name="receiveData">Receive data show!</string>
  <string name="app_name">UARTCTL</string>
  <string name="open">Open</string>
  <string name="close">Close</string>
  <string name="send">Send</string>
  <string name="config">Config</string>
  <string name="tty_settings">Settings</string>
  <string name="databits">Data bits</string>
  <string name="event">Event</string>
  <string name="speed">Speed</string>
  <string name="stopbits">Stop bits</string>
  
  <string-array name="databits_entries">
  <item>-1</item>
  <item>7</item>
  <item>8</item>
  </string-array>
  
  <string-array name="databits_values">
  <item>-1</item>
  <item>7</item>
  <item>8</item>
  </string-array>
  
  <string-array name="event_entries">
  <item>Settings</item>
  <item>None</item>
  <item>Event</item>
  <item>Odd</item>
  </string-array>
  
  <string-array name="event_values">
  <item>Q</item>
  <item>N</item>
  <item>E</item>
  <item>O</item>
  </string-array>
  
  <string-array name="speed_entries">
  <item>-1</item>
  <item>B2400</item>
  <item>B4800</item>
  <item>B9600</item>
  <item>B115200</item>
  </string-array>
  
  <string-array name="speed_values">
  <item>-1</item>
  <item>2400</item>
  <item>4800</item>
  <item>9600</item>
  <item>115200</item>
  </string-array>
  
  <string-array name="stopbits_entries">
    <item>-1</item>
    <item>1</item>
    <item>2</item>
  </string-array>

  <string-array name="stopbits_values">
    <item>-1</item>
    <item>1</item>
    <item>2</item>
  </string-array>
</resources>
