<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical" >
  
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="60dip"
    android:orientation="horizontal">
    
    <Button
      android:id="@+id/openOrcloseBtn"
      android:layout_gravity="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/open"
      />
  </LinearLayout>
  
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="60dip"
    android:orientation="horizontal">
    
    <EditText
      android:id="@+id/sendMsg"
      android:layout_gravity="left"
      android:layout_width="200dip"
      android:layout_height="50dip"
      />
    
    <Button
      android:id="@+id/sendBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/send"
      />
  </LinearLayout>
  
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="100dip"
    android:orientation="horizontal">
    
    <TextView
      android:id="@+id/receiveMsg"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/receiveData" />
  </LinearLayout>
</LinearLayout>
